src/test/ui/pattern/issue-68394-let-pat-runtime-value.stderr
error[E0080]: runtime values cannot be referenced in patterns
  --> $DIR/issue-68394-let-pat-runtime-value.rs:3:15
   |
LL |     let 0u8..=x = 0;
   |               ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
